--- a/styles.css
+++ b/styles.css
@@ -9,31 +9,73 @@ body{
   color: #aaa;
   font-family: 'Raleway', sans-serif;
   text-align: center;
+  font-size: 30px;
 }
 
 h1{
   font-size: 75px;
   padding-top: 120px;
-  padding-bottom: 50px;
+  padding-bottom: 40px;
   text-transform: uppercase;
 }
 
 h2{
   padding-bottom: 20px;
+  text-transform: uppercase;
 }
 
 h3{
-  padding-bottom: 10px;
+  text-transform: uppercase;
+  margin-bottom: 0px;
+  font-size: 30PX;
 }
 
-.measurement:hover,
-.measurement:active,
-.measurement:visited{
+.temp-div a{
+  text-transform: uppercase;
+  display: none;
+  padding-top: 0;
+  padding-bottom: 25px;
+}
+
+.temp-div a:hover,
+.temp-div a:visited,
+.temp-div a:active{
   text-decoration: none;
   color: #007bff;
 }
 
 i{
-  font-size: 70px;
+  font-size: 80px;
   padding-top: 30px;
+}
+
+.fas{
+  display: none;
+}
+
+.animation-icon{
+  position: relative;
+  animation-name: weatheranimation;
+  animation-duration: 7s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes weatheranimation {
+
+  0%{
+    top: 0px;
+    left: -75px;
+    opacity: 0;
+  }
+
+  50%{
+    opacity: 1;
+  }
+
+  100%{
+    top: 0px;
+    left: 100px;
+    opacity: 0;
+  }
 }
